[package]
name = "airindex"
description = "Learned index on external memory model for key-value data"
version = "0.1.0"
authors = ["Supawit Chockchowwat <supawit2@illinois.edu"]
edition = "2021"
# keywords = ["kv", kv-store", "kv store", "key-value", "key-value store", "external memory", "disk", "hdd", "ssd", "network", "nfs", "file systems", "learned index", "index", "hierarchical index", "model"]
repository = "https://github.com/illinoisdata/airindex"
readme = "https://github.com/illinoisdata/airindex/blob/main/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

azure_core = "0.1.1"
azure_storage = "0.1.0"
azure_storage_blobs = "0.1.0"
bson = "2.0.0"
byteorder = "1.4.3"
bytes = "1.1.0"
env_logger = "0.9.0"
erased-serde = "0.3"
flexbuffers = "2.0.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.14"
memmap2 = "0.5.2"
num = "0.4.0"
openssl = { version = "0.10.38", features = ["vendored"] }
rand = "0.8.3"
rand_pcg = "0.3.1"
rayon = "1.5.1"
sscanf = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.133"
serde_json = { version = "1.0" }
simple-error = "0.2.3"
structopt = { version = "0.3", default-features = false }
tempdir = "0.3.7"
tempfile = "3"
test-log = "0.2.8"
tokio = "1.16.1"

[[bin]]
name = "profile_storage"
path = "src/bin/profile_storage.rs"

[[bin]]
name = "sosd_keyset"
path = "src/bin/sosd_keyset.rs"

[[bin]]
name = "sosd_experiment"
path = "src/bin/sosd_experiment.rs"
