[package]
name = "airkv"
description = "Serverless LSM Tree on Cloud"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Hu<wenjiehu1993@gmail.com>"]
repository = "https://github.com/illinoisdata/airindex"
homepage = "https://github.com/illinoisdata/airindex/wiki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tempfile = "3"
rand = "0.8.3"
url = "2.2.2"
derive_more = "0.99.17"
tonic = "0.3"
prost = "0.6"
actix-rt = "*"
tokio = { version = "0.2", features = ["macros"]}

[build-dependencies]
tonic-build = "0.3"

# server binary
[[bin]]
name = "fake_store_server"
path = "src/bin/fake_store_server.rs"

