[package]
name = "airkv"
description = "Serverless LSM Tree on Cloud"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Hu<wenjiehu1993@gmail.com>"]
repository = "https://github.com/illinoisdata/airindex"
homepage = "https://github.com/illinoisdata/airindex/wiki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tempfile = "3"
rand = "0.8.3"
url = "2.2.2"
derive_more = "0.99.17"
byteorder = "1.4.3"
chrono = "0.4.19"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }



[build-dependencies]
tonic-build = "0.6"

# server binary
[[bin]]
name = "fake_store_server"
path = "src/bin/fake_store_server.rs"

[lib]
doctest = false