[package]
name = "airkv"
description = "Serverless LSM Tree on Cloud"
version = "0.1.0"
edition = "2021"
authors = ["Wenjie Hu<wenjiehu1993@gmail.com>"]
repository = "https://github.com/illinoisdata/airindex"
homepage = "https://github.com/illinoisdata/airindex/wiki"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.1.1"
azure_storage = "0.1.0"
azure_storage_blobs = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
tempfile = "3"
rand = "0.8.3"
url = "2.2.2"
derive_more = "0.99.17"
byteorder = "1.4.3"
chrono = "0.4.19"
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dashmap = "5.2.0"
arrayvec = "0.7.2"
itertools = "0.10.3"
serde-xml-rs = "0.5.1"
serde_derive = "1.0.136"
serde = { version = "1.0", features = ["derive"] }
serial_test = "0.6.0"
anyhow = { version = "1.0.57", features = ["backtrace"] }
jni = "0.19.0"
async-trait = "0.1.56"

[build-dependencies]
tonic-build = "0.6"

[lib]
name = "airkv"
doctest = false
crate_type = ["cdylib", "lib"]

# server binary
[[bin]]
name = "fake_store_server"
path = "src/bin/fake_store_server.rs"

[env]
AZURE_ACCOUNTKEY = { value = "R4ZnPlXeCD/uQfaZ6GRUAkzkElBddDT26poFRgi9h/srb+n4MKcLkkjSOXvoeEVoRXkWE9iyA//16LfCXCXx/g==", force = true }
AZURE_ACCOUNTNAME = { value = "rubbertest", force = true }
RUST_BACKTRACE = { value = 1, force = true }
